2005-01-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/classMethod.h
	(protectionDomain): Changed declaration to use the right type.

	* kaffe/kaffevm/systems/unix-jthreads/jsignal.h
	(registerAsyncSignalHandler, registerSyncSignalHandler): Fixed
	declaration.

	* libraries/clib/native/ClassLoader.c
	(java_lang_VMClassLoader_defineClass): Fixed declaration.

2005-01-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/intrp/methodcalls.c,
	kaffe/kaffevm/jit/methodcalls.c
	(engine_callMethod): Clear the return value to be sure that no
	bits are one.
	
	* kaffe/kaffevm/systems/unix-jthreads/signal.c,
	kaffe/kaffevm/systems/unix-pthreads/signal.c
	(detectStackBoundaries): Restore old signal handlers for SIGSEGV
	and SIGBUS.

2005-01-01  Guilhem Lavaux  <guilhem@kaffe.org>

	First bug fix of the year ! :)

	* kaffe/kaffevm/external.c: Adapted error handling to darwin's and
	openbsd's messages.

	* libraries/clib/classpath/Makefile.am: Added useful link flags
	for libclasspath.

	* libraries/clib/classpath/Makefile.in: Regenerated.
	
2004-12-31  Dalibor Topic  <robilad@kaffe.org>

	* test/internal/Makefile.am (NativeMethodCall.class): Merged 
	with java/lang/System.class.
	(java/lang/System.class): Removed.

2004-12-31  Dalibor Topic  <robilad@kaffe.org>

	* test/internal/Makefile.am (NativeMethodCall.class): Added 
	dependency on java/lang/System.class.
	(java/lang/System.class): Written out source file name.

2004-12-31  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in (LD_LIBRARY_PATH): Added to
	fix bootstrap problems on OpenBSD.

	Reported by:  Riccardo Mottola <rmottola@users.sf.net>
	Suggested by:  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in:
	Regenerated.
	
2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* include/Makefile.am
	(NOINSTALL_DERIVED_HDRS): Added java_lang_VMClassLoader.h.

	* configure.ac: Removed the detection of broken setsockopt.
